--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,9 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react-jsx",
-        "downlevelIteration": true,
-        "noFallthroughCasesInSwitch": true
-    },
+  "compilerOptions": {
+      "lib": ["ES2022", "DOM"],
+      "target": "es5",
+      "module": "commonjs",
+      "outDir": "out",
+      "sourceMap": true
+  }
 }
